translation-tool/inputs/source_meta/objects/Customer_Product__c.object
<CustomObject>
    <description>This Object defines Product selected by user for particular account.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Customer from the Accounts Table</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Products</relationshipLabel>
        <relationshipName>Customer_Products1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Category__c</fullName>
        <description>Billing Category is Similar to Product Grouping but needed by Billing</description>
        <label>Billing Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wireline</fullName>
                </value>
                <value>
                    <fullName>VADB</fullName>
                </value>
                <value>
                    <fullName>Active Bonding</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
                <value>
                    <fullName>Satellite</fullName>
                </value>
                <value>
                    <fullName>WiFi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.Brand_LE_Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Customer Products</relationshipLabel>
        <relationshipName>Customer_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_of_Life_for_Install__c</fullName>
        <description>Indicates End of Life of a given product for Installation purposes</description>
        <label>End of Life for Install</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Life_for_Sale__c</fullName>
        <description>Indicates End of Life of a given product for Sales purposes</description>
        <label>End of Life for Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Life_for_Support__c</fullName>
        <description>Indicates End of Life of a given product for customer service purposes</description>
        <label>End of Life for Support</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Status__c</fullName>
        <description>Indicates launched status of a Product for a given Customer</description>
        <label>Launch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Pilot</fullName>
                </value>
                <value>
                    <fullName>Field Pilot</fullName>
                </value>
                <value>
                    <fullName>Feature Restricted</fullName>
                </value>
                <value>
                    <fullName>Volume Restricted</fullName>
                </value>
                <value>
                    <fullName>Customer Specific</fullName>
                </value>
                <value>
                    <fullName>Unrestricted</fullName>
                    <default>true</default>
                    <label>Unrestricted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_Product_Code__c</fullName>
        <formula>TEXT(Product__r.Product_Type__c)+&apos;-&apos;+ Product__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type - Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Products mapped to a customer.</description>
        <label>Product</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Customer Products (Product)</relationshipLabel>
        <relationshipName>Customer_Products1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Customer Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ECOB_End_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( End_of_Life_for_Install__c &lt; TODAY() ,
 End_of_Life_for_Sale__c &lt; TODAY(),
  End_of_Life_for_Support__c &lt; TODAY())</errorConditionFormula>
        <errorMessage>All End Dates Cannot be in Past</errorMessage>
    </validationRules>
</CustomObject>